--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,8 +1,47 @@
 .hero {
   overflow: hidden;
+
+  position: relative;
 }
+
+.hero__container::after {
+  content: '';
+  position: absolute;
+  left: 32px;
+  top: 1px;
+  display: block;
+  width: 152px;
+  height: 2px;
+  background: white;
+  border-radius: 5px;
+  display: none;
+
+  animation: hero-line 1.1s both;
+  animation-delay: 1.2s;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: block;
+    @keyframes hero-line {
+      0% {
+        transform: scale3d(0, 1, 1);
+      }
+      50% {
+        transform: scale3d(1, 1, 1);
+      }
+      75% {
+        transform: scale3d(0, 1, 1);
+      }
+
+      100% {
+        transform: scale3d(0, 1, 1);
+      }
+    }
+  }
+}
+
 .hero__container {
   position: relative;
+
   padding-top: 38px;
   padding-bottom: 236px;
 
@@ -88,6 +127,9 @@
   @media screen and (min-width: 768px) {
     margin-bottom: 24px;
     max-width: 248px;
+
+    animation: title-animation-tablet 2s cubic-bezier(0, 1, 1, 1) both;
+    animation-delay: 1s;
   }
 
   @media screen and (min-width: 1200px) {
@@ -321,6 +363,9 @@
 
   @media screen and (min-width: 768px) {
     left: 408px;
+
+    animation: ice-cream-move-tablet 2s both cubic-bezier(0, 0.7, 0.4, 1);
+    animation-delay: 1s;
   }
 
   @media screen and (min-width: 1200px) {
@@ -339,6 +384,9 @@
     display: block;
     left: 32px;
     bottom: 12px;
+
+    animation: cup-drop-tablet 1.5s both cubic-bezier(0, 0.5, 1, 1);
+    animation-delay: 1.2s;
   }
 
   @media screen and (min-width: 1200px) {
@@ -459,5 +507,84 @@
 
   100% {
     transform: translateY(0) translateX(0) scale(1) scale3d(1, 1, 1);
+  }
+}
+
+@keyframes ice-cream-move-tablet {
+  0% {
+    transform: rotate(-25deg) translateY(5px) translateX(-80px);
+  }
+
+  50% {
+    transform: rotate(15deg) translateY(30px) translateX(20)
+      scale3d(0.92, 1.02, 1);
+  }
+
+  100% {
+    transform: rotate(0deg) translateY(0) translateX(0);
+  }
+}
+
+@keyframes title-animation-tablet {
+  0% {
+    transform: translateY(0px) translateX(0px);
+  }
+
+  50% {
+    transform: translateY(0px) translateX(210px) scale3d(0.7, 1.1, 1);
+  }
+
+  100% {
+    transform: translateY(0) translateX(0) scale3d(1, 1, 1);
+  }
+}
+
+@keyframes cup-drop-tablet {
+  0% {
+    transform: translateY(-900px);
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    transform: translateY(0px) scale3d(1, 1, 1);
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+
+  38% {
+    transform: translateY(0px) scale3d(1, 1, 1);
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+
+  45% {
+    transform: translateY(0px) scale3d(1.1, 0.8, 1);
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+
+  55% {
+    transform: translateY(-65px) scale3d(1, 1, 1);
+    animation-timing-function: ease-in;
+  }
+  72% {
+    transform: translateY(0) scale3d(1, 1, 1);
+    animation-timing-function: ease-out;
+  }
+  81% {
+    transform: translateY(-28px) scale3d(1, 1, 1);
+    animation-timing-function: ease-in;
+  }
+  90% {
+    transform: translateY(0) scale3d(1, 1, 1);
+    animation-timing-function: ease-out;
+  }
+  95% {
+    transform: translateY(-8px) scale3d(1, 1, 1);
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: translateY(0) translateX(0) scale3d(1, 1, 1);
+    animation-timing-function: ease-out;
   }
 }
