--- a/src/sass/components/_modal-ingredients.scss
+++ b/src/sass/components/_modal-ingredients.scss
@@ -8,9 +8,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 0;
-  transform: translateX(-50%);
-  overflow-y: scroll;
+  // top: 0;
+  // transform: translateX(-50%);
+  // overflow-y: scroll;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   @media screen and (min-width: 768px) {
     width: 568px;
     height: 996px;
@@ -33,6 +38,9 @@
   position: relative;
   width: 132px;
   height: 132px;
+
+  min-height: 132px;
+
   border-radius: 50%;
   background: getBgColor(green-circle);
   box-shadow: getShadow(prod-green);
